# ai

./: .gitignore  README.md
browser-video-player/: README.md  demo.html  video-player.css  video-player.js
image-tool/: .gitignore  README.md  build.sh  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  vite.config.ts  wails.json
image-tool-wails/: go.mod  main.go
image-tool-wails/backend/: app.go  run.go
image-tool-wails/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
image-tool/backend/: app.go  imageproc.go  run.go  types.go
image-tool/frontend/: index.html  package-lock.json  package.json  package.json.md5
image-tool/src/: App.tsx  index.css
image-tool/src-tauri/: Cargo.toml  tauri.conf.json
image-tool/src-tauri/capabilities/: default.json
image-tool/src-tauri/icons/: icon.icns
image-tool/src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
image-view/: .gitignore  README.md  build.sh  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  vite.config.js  wails.json
image-view/backend/: app.go  app_focus_test.go  foreground_darwin.go  foreground_other.go  local_file_handler.go  run.go  (+1 more)
image-view/src-tauri/: Cargo.toml  tauri.conf.json
image-view/src-tauri/capabilities/: default.json
image-view/src-tauri/icons/: icon.icns
image-view/src-tauri/src/: lib.rs
mac-monitor/: README.md  app.py  build.py  build.sh  menubar_monitor.spec  requirements.txt  test_app.py
video-player/: README.md  app.go  app_test.go  build.sh  go.mod  main.go  media_duration.go  wails.json
(+73 files in other folders)
